Fixed the css up so the page doesn't look terrible on smaller resolutions.

--- a/src/pages/signupPage/signupPage.css
+++ b/src/pages/signupPage/signupPage.css
@@ -1,14 +1,10 @@
 .signup-page {
-    width:  100vw;
-    height: 100vh;
+    width: 100vw;
+    height: 100%;
+    text-align: center;
 }
 
 .signup-content {
-    position: absolute;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -21,12 +17,17 @@
     align-items: center;
 }
 
-.signup-title {
+.signup-form-title {
+    margin: 3%;
+}
 
+.signup-form {
+    height: 100%;
+    width: 100%;
 }
 
 .signup-form-container {
-    height: 75vh;
+    height: 80vh;
     width: 30vw;
     background-color: var(--input-container-background-color);
     border-radius: 10px;
@@ -89,9 +90,6 @@
 }
 
 
-
-
-
 .signup-footer {
     margin: 0;
     padding-top: 10px;
@@ -114,4 +112,56 @@
 
 .signup-footer-hr {
     margin: 20px 15% 0 15%;
+}
+
+
+@media screen and (max-width: 1300px) {
+    .signup-form-title {
+        margin: 2%;
+        margin-bottom: 0;
+    }
+
+    .signup-form {
+        height: 100%;
+        width: 100%;
+    }
+
+    .signup-form-container {
+        height: 80%;
+        width: 25vw;
+    }
+
+    .signup-label {
+        margin-top: 2%;
+    }
+
+    .signup-input {
+        font-size: medium;
+        height: 2%;
+    }
+
+    .signup-submit {
+        margin-top: 1%;
+        height: 5%;
+        line-height: 5%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .signup-form-container {
+        width: 65vw;
+        height: 75%;
+    }
+
+    .signup-label {
+        margin-top: 3%;
+    }
+    
+    .signup-input {
+        font-size: small;
+    }
+
+    .signup-submit {
+        height: 7%;
+    }
 }
